--- a/examples/dom/index.html
+++ b/examples/dom/index.html
@@ -5,5 +5,6 @@
   <body>
     <script src='./index.js'></script>
     <p>A greeting from rust looks like...</p>
+    <p id="dom" style="width: 20px">Very long text Very long text Very long text Very long text </p>
   </body>
 </html>
